# AltitudeControlAlgorithm-V2

./: .gitmodules  CMakeLists.txt  Control Algorithm V2.code-workspace  README.md  header.h  main.cpp
data/: Alift.csv  Blift.csv  OptimalTrajectoryDelayed.csv  OptimalTrajectoryDelayed_0.05.csv  OptimalTrajectoryDelayed_0.1.csv  cent.csv  deviations.csv  getTrajectory.m  input.csv  plotSim.m  robustness.asv  robustness.m  state.csv  stateOffsets.csv
include/: controller.h  controller.ipp  dynamics.h  helpers.h  rbf.h  saturator.h  simulator.h
src/: CMakeLists.txt  controller.cpp  dynamics.cpp  helpers.cpp  rbf.cpp  saturator.cpp  simulator.cpp
